# yomiyomi

./: pyproject.toml
medinfo/: main.py  medications.xlsx  my_medications.xlsx  readme.md
medinfo/data/: medinfo.xlsx
